unpackaged/main/default/objects/Engagement_Survey__c/Engagement_Survey__c.object-meta.xml
<CustomObject>
    <label>Engagement Survey</label>
    <nameField>
        <displayFormat>ES-{0}</displayFormat>
        <label>Engagement Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>