unpackaged/main/default/objects/Engagement_Survey__c/fields/About_Course_Instructors__c.field-meta.xml
<CustomField>
    <fullName>About_Course_Instructors__c</fullName>
    <label>About Course Instructors?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>