unpackaged/main/default/objects/Engagement_Survey__c/fields/Activities_With_Most_Impact__c.field-meta.xml
<CustomField>
    <fullName>Activities_With_Most_Impact__c</fullName>
    <description>Survey Monkey Question: Which of the following activities do you consider to have the most impact on your learning during the training?</description>
    <label>Activities With Most Impact?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>