unpackaged/main/default/objects/Engagement_Survey__c/fields/Activities_with_most_impact_Other__c.field-meta.xml
<CustomField>
    <fullName>Activities_with_most_impact_Other__c</fullName>
    <description>Survey allows an &quot;other&quot; text box for user to specify other types of activities that would be helpful.</description>
    <label>Activities with most impact - Other</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>