unpackaged/main/default/objects/Engagement_Survey__c/fields/Administration_Staff_Professional__c.field-meta.xml
<CustomField>
    <fullName>Administration_Staff_Professional__c</fullName>
    <inlineHelpText>NCM Institute Administration:  The administrative staff was professional and accommodating.</inlineHelpText>
    <label>Administration Staff Professional</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>