unpackaged/main/default/objects/Engagement_Survey__c/fields/Cohort_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Feedback__c</fullName>
    <description>Survey Monkey Question: Please provide any specific feedback on the program as a whole</description>
    <label>Cohort Feedback</label>
    <type>TextArea</type>
</CustomField>