unpackaged/main/default/objects/Engagement_Survey__c/fields/Cohort_Most_Useful_Topics__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Most_Useful_Topics__c</fullName>
    <label>Cohort Most Useful Topics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>