unpackaged/main/default/objects/Engagement_Survey__c/fields/Cohort_NPS__c.field-meta.xml
<CustomField>
    <fullName>Cohort_NPS__c</fullName>
    <label>Cohort NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>