unpackaged/main/default/objects/Engagement_Survey__c/fields/Cohort_Topics_to_Improve__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Topics_to_Improve__c</fullName>
    <label>Cohort Topics to Improve</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>