unpackaged/main/default/objects/Engagement_Survey__c/fields/Completed_Survey__c.field-meta.xml
<CustomField>
    <fullName>Completed_Survey__c</fullName>
    <label>Completed Survey</label>
    <type>DateTime</type>
</CustomField>