unpackaged/main/default/objects/Engagement_Survey__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <label>Completion Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>