unpackaged/main/default/objects/Engagement_Survey__c/fields/Course_NPS__c.field-meta.xml
<CustomField>
    <fullName>Course_NPS__c</fullName>
    <inlineHelpText>How likely are you to recommend this course to others?</inlineHelpText>
    <label>Course NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>