unpackaged/main/default/objects/Engagement_Survey__c/fields/Curriculum_Content_Organized__c.field-meta.xml
<CustomField>
    <fullName>Curriculum_Content_Organized__c</fullName>
    <inlineHelpText>1.1. Training Process   The curriculum content was organized and easy to follow.</inlineHelpText>
    <label>Curriculum Content Organized</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>