unpackaged/main/default/objects/Engagement_Survey__c/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>