unpackaged/main/default/objects/Engagement_Survey__c/fields/Engagement_Activity__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Activity</label>
    <referenceTo>Engagement_Activity__c</referenceTo>
    <relationshipLabel>Engagement Surveys</relationshipLabel>
    <relationshipName>Engagement_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>