unpackaged/main/default/objects/Engagement_Survey__c/fields/Followed_Up__c.field-meta.xml
<CustomField>
    <fullName>Followed_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the survey has been reviewed and followed up with.</description>
    <label>Sales Followed Up</label>
    <type>Checkbox</type>
</CustomField>