unpackaged/main/default/objects/Engagement_Survey__c/fields/Followup_Email__c.field-meta.xml
<CustomField>
    <fullName>Followup_Email__c</fullName>
    <label>Followup Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>