unpackaged/main/default/objects/Engagement_Survey__c/fields/Followup_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Followup_Last_Name__c</fullName>
    <label>Followup Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>