unpackaged/main/default/objects/Engagement_Survey__c/fields/Followup_Number__c.field-meta.xml
<CustomField>
    <fullName>Followup_Number__c</fullName>
    <label>Followup Number</label>
    <type>Phone</type>
</CustomField>