unpackaged/main/default/objects/Engagement_Survey__c/fields/Followup_Title__c.field-meta.xml
<CustomField>
    <fullName>Followup_Title__c</fullName>
    <label>Followup Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>