unpackaged/main/default/objects/Engagement_Survey__c/fields/GetFeedback_Response_Id__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Response_Id__c</fullName>
    <externalId>true</externalId>
    <label>GetFeedback Response Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>