unpackaged/main/default/objects/Engagement_Survey__c/fields/Hotel_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Satisfaction__c</fullName>
    <inlineHelpText>NCM Institute Administration:  I was satisfied with my hotel accommodations</inlineHelpText>
    <label>Hotel Satisfaction</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>