unpackaged/main/default/objects/Engagement_Survey__c/fields/How_Motivated_to_Use__c.field-meta.xml
<CustomField>
    <fullName>How_Motivated_to_Use__c</fullName>
    <label>How Motivated to Use?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>