unpackaged/main/default/objects/Engagement_Survey__c/fields/Instructor_1_Answering_Questions__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1_Answering_Questions__c</fullName>
    <description>Survey Monkey Question: Please rate Instructor 1 in the following areas: The instructor effectively answered questions.</description>
    <label>Instructor 1 Answering Questions</label>
    <type>TextArea</type>
</CustomField>