unpackaged/main/default/objects/Engagement_Survey__c/fields/Instructor_1_Class_Participation__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1_Class_Participation__c</fullName>
    <label>Instructor 1 Class Participation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>