unpackaged/main/default/objects/Engagement_Survey__c/fields/Instructor_1_Good_Pacing__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1_Good_Pacing__c</fullName>
    <description>Survey Monkey Question: Please rate Instructor 1 in this area: The instructor maintained a good pace.</description>
    <label>Instructor 1 Good Pacing</label>
    <type>TextArea</type>
</CustomField>