unpackaged/main/default/objects/Engagement_Survey__c/fields/Instructor_1_Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1_Professionalism__c</fullName>
    <description>Survey Monkey Question: Please rate Instructor 1 in this area: The instructor conducted themselves in a professional manner.</description>
    <label>Instructor 1 Professionalism</label>
    <type>TextArea</type>
</CustomField>