unpackaged/main/default/objects/Engagement_Survey__c/fields/Instructor_2_Answering_Questions__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2_Answering_Questions__c</fullName>
    <description>Survey Monkey Question: Please rate Instructor 2 in this area: The instructor effectively answered questions.</description>
    <label>Instructor 2 Answering Questions</label>
    <type>TextArea</type>
</CustomField>