unpackaged/main/default/objects/Engagement_Survey__c/fields/Instructor_2_Class_Participation__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2_Class_Participation__c</fullName>
    <label>Instructor 2 Class Participation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>