unpackaged/main/default/objects/Engagement_Survey__c/fields/Instructor_2_Good_Pacing__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2_Good_Pacing__c</fullName>
    <description>Survey Monkey Question. Please rate Instructor 2 in this area: The instructor maintained a good pace.</description>
    <label>Instructor 2 Good Pacing</label>
    <type>TextArea</type>
</CustomField>