unpackaged/main/default/objects/Engagement_Survey__c/fields/Instructor_2_Learning_Environment__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2_Learning_Environment__c</fullName>
    <description>Survey Monkey Question: Please rate Instructor 2 in this area: The instructor created a safe and effective learning environment.</description>
    <label>Instructor 2 Learning Environment</label>
    <type>TextArea</type>
</CustomField>