unpackaged/main/default/objects/Engagement_Survey__c/fields/Instructor_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Feedback__c</fullName>
    <description>Survey Monkey Question: Do you have any other feedback regarding the instructor(s)?</description>
    <label>Instructor Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>