unpackaged/main/default/objects/Engagement_Survey__c/fields/Instructor_Interview__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Interview__c</fullName>
    <label>Instructor Interview</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>