unpackaged/main/default/objects/Engagement_Survey__c/fields/Learning_Impacting_Employer__c.field-meta.xml
<CustomField>
    <fullName>Learning_Impacting_Employer__c</fullName>
    <label>Learning Impacting Employer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>