unpackaged/main/default/objects/Engagement_Survey__c/fields/Lunch_Choices__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Choices__c</fullName>
    <inlineHelpText>NCM Institute Administration:  The lunch choices were satisfying and appropriate.</inlineHelpText>
    <label>Lunch Choices</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>