unpackaged/main/default/objects/Engagement_Survey__c/fields/Material_Usefulness__c.field-meta.xml
<CustomField>
    <fullName>Material_Usefulness__c</fullName>
    <inlineHelpText>Training Process   The materials distributed were pertinent and useful.</inlineHelpText>
    <label>Material Usefulness</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>