unpackaged/main/default/objects/Engagement_Survey__c/fields/NPS_Raw_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Raw_Score__c</fullName>
    <description>Stores the string value of the NPS score if the survey provider only sends NPS as a string (ex: &quot;3&quot;) instead of a proper integer value.</description>
    <label>NPS Raw Score</label>
    <length>5</length>
    <type>Text</type>
</CustomField>