unpackaged/main/default/objects/Engagement_Survey__c/fields/Orientation_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Feedback__c</fullName>
    <label>Orientation Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>