unpackaged/main/default/objects/Engagement_Survey__c/fields/Orientation_Precourse__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Precourse__c</fullName>
    <label>Orientation Precourse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>