unpackaged/main/default/objects/Engagement_Survey__c/fields/Product_Interest_SM__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest_SM__c</fullName>
    <description>Raw NCM Product interest value from SurveyMonkey since SM doesn&#39;t offer mapped values to shorten the response to just &quot;20 Group&quot; or &quot;aXcessa&quot; but rather sends &quot;Service Name - lengthy offering description displayed on the survey for our customers&quot;.</description>
    <label>Product Interest (SM)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>