unpackaged/main/default/objects/Engagement_Survey__c/fields/Professional_Skills_Improved__c.field-meta.xml
<CustomField>
    <fullName>Professional_Skills_Improved__c</fullName>
    <inlineHelpText>Training Process   I believe my professional skills have been improved from the training.</inlineHelpText>
    <label>Professional Skills Improved</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>