unpackaged/main/default/objects/Engagement_Survey__c/fields/Put_Into_Practice__c.field-meta.xml
<CustomField>
    <fullName>Put_Into_Practice__c</fullName>
    <label>Put Into Practice?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>