unpackaged/main/default/objects/Engagement_Survey__c/fields/Recommend_NCM_NPS__c.field-meta.xml
<CustomField>
    <fullName>Recommend_NCM_NPS__c</fullName>
    <description>Net Promoter Score for NCM Products and Services in general.</description>
    <label>Recommend NCM NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>