unpackaged/main/default/objects/Engagement_Survey__c/fields/Registration_Smooth__c.field-meta.xml
<CustomField>
    <fullName>Registration_Smooth__c</fullName>
    <inlineHelpText>NCM Institute Administration:  Registration for the class was an easy and smooth process.</inlineHelpText>
    <label>Registration Smooth</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>