unpackaged/main/default/objects/Engagement_Survey__c/fields/Started_Survey__c.field-meta.xml
<CustomField>
    <fullName>Started_Survey__c</fullName>
    <label>Started Survey</label>
    <type>DateTime</type>
</CustomField>