unpackaged/main/default/objects/Engagement_Survey__c/fields/Survey_Followed_Up__c.field-meta.xml
<CustomField>
    <fullName>Survey_Followed_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Followed Up</label>
    <type>Checkbox</type>
</CustomField>