unpackaged/main/default/objects/Engagement_Survey__c/fields/Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Name__c</fullName>
    <label>Survey Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>