unpackaged/main/default/objects/Engagement_Survey__c/fields/Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Testimonial__c</fullName>
    <label>Testimonial</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>