unpackaged/main/default/objects/Engagement_Survey__c/fields/Topics_Missing__c.field-meta.xml
<CustomField>
    <fullName>Topics_Missing__c</fullName>
    <label>Topics Missing</label>
    <type>TextArea</type>
</CustomField>