unpackaged/main/default/objects/Engagement_Survey__c/fields/Topics_to_Improve__c.field-meta.xml
<CustomField>
    <fullName>Topics_to_Improve__c</fullName>
    <label>Topics to Improve</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>