unpackaged/main/default/objects/Engagement_Survey__c/fields/Training_Information__c.field-meta.xml
<CustomField>
    <fullName>Training_Information__c</fullName>
    <inlineHelpText>Training Process   The amount of information was just about right.</inlineHelpText>
    <label>Training Information</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>