unpackaged/main/default/objects/Engagement_Survey__c/fields/Training_Met_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Training_Met_Expectations__c</fullName>
    <inlineHelpText>Training Process   The training met my expectations.</inlineHelpText>
    <label>Training Met Expectations</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>