unpackaged/main/default/objects/Engagement_Survey__c/fields/Understand_Concepts_Taught__c.field-meta.xml
<CustomField>
    <fullName>Understand_Concepts_Taught__c</fullName>
    <description>Survey Monkey Question: Now that you’ve completed the training, how well do you feel you UNDERSTAND the concepts taught?</description>
    <label>Understand Concepts Taught?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>