unpackaged/main/default/objects/Engagement_Survey__c/fields/Useful_Topics__c.field-meta.xml
<CustomField>
    <fullName>Useful_Topics__c</fullName>
    <label>Useful Topics</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>