unpackaged/main/default/objects/Engagement_Survey__c/fields/Which_Supports_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Which_Supports_in_Place__c</fullName>
    <label>Which Supports in Place?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>