unpackaged/main/default/objects/Engagement_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Engagement_Attendee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Survey_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>